--- a/podman/Containerfile
+++ b/podman/Containerfile
@@ -2,7 +2,7 @@ FROM gcc:14.2
 ENV NODE_VERSION 20.11.1
 ENV NVM_DIR /usr/local/nvm
 RUN apt-get update && \
-    apt-get install -y rsync git patchelf gdb && \
+    apt-get install -y rsync git patchelf gdb valgrind && \
     rm -rf /var/lib/apt/lists/* && \
     mkdir -p "$NVM_DIR" && \
     curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.2/install.sh | bash && \
