--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "build": "(cd packages/crc32c && npm run build) && (cd packages/schema && npm run build) && (cd packages/db && npm run build)",
     "build-podman": "cd podman && ./build.sh",
     "build-locale": "cd packages/locale && ./build.sh",
+    "build-release-debug": "npm run build-podman && npm run build-locale && (cd packages/crc32c && npm run build) && (cd packages/schema && npm run build) && (cd packages/db && npm run build-release-debug)",
     "build-release": "npm run build-podman && npm run build-locale && (cd packages/crc32c && npm run build) && (cd packages/schema && npm run build) && (cd packages/db && npm run build-release)",
     "publish": "sh scripts/publish.sh",
     "test": "cd packages/client && npm run test",
